hphp/hack/test/extended_reasons/shape_subtyping.php.exp
error: Typing[4057] Invalid argument [1]
-> The field b is missing [2]
-> The field b is defined [3]
-> Here's why: this hint [4]
-> flows into this hint, via the required shape field 'b' [5]
-> which itself flows into this hint [6]
-> which itself flows into this expression [7]
-> which itself flows into this expression [1]
-> which itself flows into this expression [1]
-> which itself flows into this expression, via the (contravariant) 1st function parameter [8]
-> which itself flows from this declaration [9]
-> which itself flows into this hint, via the (contravariant) 1st function parameter [2]
-> which itself flows into this hint [10]
-> which itself flows into nothing, via the non-existent shape field 'b' [11]

shape_subtyping.php:60:35
        25 | 
        26 | 
[2]     27 | type required_a_at_int = shape('a' => int);
        28 | type required_a_at_bool = shape('a' => bool);
        29 | type optional_a_at_int = shape(?'a' => int);
        30 | type optional_a_at_bool = shape(?'a' => bool);
[3,4,5] 31 | type missing_a = shape('b' => int);
        32 | 
[9]     33 | function expects_required_a_at_int_alias(
[10]    34 | required_a_at_int $s,
        35 | ): void {
        36 | }
           :
        56 | 
        57 | function passes_missing_a_alias(
[6,7]   58 |   missing_a $s,
        59 | ): void {
[1,8]   60 |   expects_required_a_at_int_alias($s);
        61 | }

.:0:0
[11]     0 | No source found

error: Typing[4057] Invalid argument [1]
-> The field a is missing [2]
-> The field a is defined [3]
-> Here's why: nothing [4]
-> flows into this hint, via the non-existent shape field 'a' [2]
-> which itself flows into this hint [5]
-> which itself flows into this expression [6]
-> which itself flows into this expression [1]
-> which itself flows into this expression [1]
-> which itself flows into this expression, via the (contravariant) 1st function parameter [7]
-> which itself flows from this declaration [8]
-> which itself flows into this hint, via the (contravariant) 1st function parameter [9]
-> which itself flows into this hint [10]
-> which itself flows into this hint, via the required shape field 'a' [11]

shape_subtyping.php:60:35
         25 | 
         26 | 
[3,9,11] 27 | type required_a_at_int = shape('a' => int);
         28 | type required_a_at_bool = shape('a' => bool);
         29 | type optional_a_at_int = shape(?'a' => int);
         30 | type optional_a_at_bool = shape(?'a' => bool);
[2]      31 | type missing_a = shape('b' => int);
         32 | 
[8]      33 | function expects_required_a_at_int_alias(
[10]     34 | required_a_at_int $s,
         35 | ): void {
         36 | }
            :
         56 | 
         57 | function passes_missing_a_alias(
[5,6]    58 |   missing_a $s,
         59 | ): void {
[1,7]    60 |   expects_required_a_at_int_alias($s);
         61 | }

.:0:0
[4]       0 | No source found

error: Typing[4110] Invalid argument [1]
-> Expected int [2]
-> But got bool [3]
-> Here's why: this hint [3]
-> flows into this hint, via the required shape field 'a' [4]
-> which itself flows into this expression [5]
-> which itself flows into this expression [1]
-> which itself flows into this expression [1]
-> which itself flows into this expression, via the (contravariant) 1st function parameter [6]
-> which itself flows from this declaration [7]
-> which itself flows into this hint, via the (contravariant) 1st function parameter [8]
-> which itself flows into this hint, via the required shape field 'a' [2]

shape_subtyping.php:11:29
         1 | <?hh
         2 | 
[7]      3 | function expects_required_a_at_int(
[2,8]    4 | shape('a' => int) $s,
         5 | ): void {
         6 | }
         7 | 
         8 | function passes_required_a_at_bool(
[3,4,5]  9 |   shape('a' => bool) $s,
        10 | ): void {
[1,6]   11 |   expects_required_a_at_int($s);
        12 | }
        13 | 

error: Typing[4110] Invalid argument [1]
-> Expected int [2]
-> But got bool [3]
-> Here's why: this hint [3]
-> flows into this hint, via the required shape field 'a' [4]
-> which itself flows into this hint [5]
-> which itself flows into this expression [6]
-> which itself flows into this expression [1]
-> which itself flows into this expression [1]
-> which itself flows into this expression, via the (contravariant) 1st function parameter [7]
-> which itself flows from this declaration [8]
-> which itself flows into this hint, via the (contravariant) 1st function parameter [9]
-> which itself flows into this hint [10]
-> which itself flows into this hint, via the required shape field 'a' [2]

shape_subtyping.php:41:35
      25 | 
      26 | 
[2,9] 27 | type required_a_at_int = shape('a' => int);
[3,4] 28 | type required_a_at_bool = shape('a' => bool);
      29 | type optional_a_at_int = shape(?'a' => int);
      30 | type optional_a_at_bool = shape(?'a' => bool);
      31 | type missing_a = shape('b' => int);
      32 | 
[8]   33 | function expects_required_a_at_int_alias(
[10]  34 | required_a_at_int $s,
      35 | ): void {
      36 | }
      37 | 
      38 | function passes_required_a_at_bool_alias(
[5,6] 39 |   required_a_at_bool $s,
      40 | ): void {
[1,7] 41 |   expects_required_a_at_int_alias($s);
      42 | }
      43 | 

error: Typing[4163] Invalid argument [1]
-> The field a is optional [2]
-> The field a is defined as required [3]
-> a is defined here [4]
-> Here's why: this hint [5]
-> flows into this hint, via the optional shape field 'a' [2]
-> which itself flows into this expression [6]
-> which itself flows into this expression [1]
-> which itself flows into this expression [1]
-> which itself flows into this expression, via the (contravariant) 1st function parameter [7]
-> which itself flows from this declaration [8]
-> which itself flows into this hint, via the (contravariant) 1st function parameter [3]
-> which itself flows into this hint, via the required shape field 'a' [4]

shape_subtyping.php:17:29
         1 | <?hh
         2 | 
[8]      3 | function expects_required_a_at_int(
[3,4]    4 | shape('a' => int) $s,
         5 | ): void {
         6 | }
           :
        13 | 
        14 | function passes_optional_a_at_int(
[2,5,6] 15 |   shape(?'a' => int) $s,
        16 | ): void {
[1,7]   17 |   expects_required_a_at_int($s);
        18 | }
        19 | 

error: Typing[4163] Invalid argument [1]
-> The field a is optional [2]
-> The field a is defined as required [3]
-> a is defined here [4]
-> Here's why: this hint [5]
-> flows into this hint, via the optional shape field 'a' [2]
-> which itself flows into this expression [6]
-> which itself flows into this expression [1]
-> which itself flows into this expression [1]
-> which itself flows into this expression, via the (contravariant) 1st function parameter [7]
-> which itself flows from this declaration [8]
-> which itself flows into this hint, via the (contravariant) 1st function parameter [3]
-> which itself flows into this hint, via the required shape field 'a' [4]

shape_subtyping.php:23:29
         1 | <?hh
         2 | 
[8]      3 | function expects_required_a_at_int(
[3,4]    4 | shape('a' => int) $s,
         5 | ): void {
         6 | }
           :
        19 | 
        20 | function passes_optional_a_at_bool(
[2,5,6] 21 |   shape(?'a' => bool) $s,
        22 | ): void {
[1,7]   23 |   expects_required_a_at_int($s);
        24 | }
        25 | 

error: Typing[4163] Invalid argument [1]
-> The field a is optional [2]
-> The field a is defined as required [3]
-> a is defined here [4]
-> Here's why: this hint [5]
-> flows into this hint, via the optional shape field 'a' [2]
-> which itself flows into this hint [6]
-> which itself flows into this expression [7]
-> which itself flows into this expression [1]
-> which itself flows into this expression [1]
-> which itself flows into this expression, via the (contravariant) 1st function parameter [8]
-> which itself flows from this declaration [9]
-> which itself flows into this hint, via the (contravariant) 1st function parameter [3]
-> which itself flows into this hint [10]
-> which itself flows into this hint, via the required shape field 'a' [4]

shape_subtyping.php:47:35
      25 | 
      26 | 
[3,4] 27 | type required_a_at_int = shape('a' => int);
      28 | type required_a_at_bool = shape('a' => bool);
[2,5] 29 | type optional_a_at_int = shape(?'a' => int);
      30 | type optional_a_at_bool = shape(?'a' => bool);
      31 | type missing_a = shape('b' => int);
      32 | 
[9]   33 | function expects_required_a_at_int_alias(
[10]  34 | required_a_at_int $s,
      35 | ): void {
      36 | }
         :
      43 | 
      44 | function passes_optional_a_at_int_alias(
[6,7] 45 |   optional_a_at_int $s,
      46 | ): void {
[1,8] 47 |   expects_required_a_at_int_alias($s);
      48 | }
      49 | 

error: Typing[4163] Invalid argument [1]
-> The field a is optional [2]
-> The field a is defined as required [3]
-> a is defined here [4]
-> Here's why: this hint [5]
-> flows into this hint, via the optional shape field 'a' [2]
-> which itself flows into this hint [6]
-> which itself flows into this expression [7]
-> which itself flows into this expression [1]
-> which itself flows into this expression [1]
-> which itself flows into this expression, via the (contravariant) 1st function parameter [8]
-> which itself flows from this declaration [9]
-> which itself flows into this hint, via the (contravariant) 1st function parameter [3]
-> which itself flows into this hint [10]
-> which itself flows into this hint, via the required shape field 'a' [4]

shape_subtyping.php:53:35
      25 | 
      26 | 
[3,4] 27 | type required_a_at_int = shape('a' => int);
      28 | type required_a_at_bool = shape('a' => bool);
      29 | type optional_a_at_int = shape(?'a' => int);
[2,5] 30 | type optional_a_at_bool = shape(?'a' => bool);
      31 | type missing_a = shape('b' => int);
      32 | 
[9]   33 | function expects_required_a_at_int_alias(
[10]  34 | required_a_at_int $s,
      35 | ): void {
      36 | }
         :
      49 | 
      50 | function passes_optional_a_at_bool_alias(
[6,7] 51 |   optional_a_at_bool $s,
      52 | ): void {
[1,8] 53 |   expects_required_a_at_int_alias($s);
      54 | }
      55 | 

8 errors found.
